--- a/topup backend/src/main/resources/application-prod.properties
+++ b/topup backend/src/main/resources/application-prod.properties
@@ -1,25 +1,16 @@
-# Application Configuration
+# Application Configuration - Production (MongoDB Atlas)
 spring.application.name=topup-backend
 server.port=8080
 
-# MongoDB Configuration
-# Will use environment variable MONGODB_URI if available, otherwise fallback to MongoDB Atlas
+# MongoDB Atlas Configuration
+# MongoDB Atlas connection string configured (@ symbol URL-encoded as %40)
 spring.mongodb.uri=${MONGODB_URI:mongodb+srv://thujee_db:Thujee%40tamil01923@topupdb.puesjra.mongodb.net/topup_db?retryWrites=true&w=majority&appName=topupdb}
 
-# Individual properties below are ignored when URI is set
-# spring.mongodb.database=topup_db
-# spring.mongodb.host=${MONGO_HOST:localhost}
-# spring.mongodb.port=${MONGO_PORT:27017}
-# spring.mongodb.username=${MONGO_USERNAME:}
-# spring.mongodb.password=${MONGO_PASSWORD:}
-# spring.mongodb.authentication-database=${MONGO_AUTH_DB:}
-
-# Additional settings
-# Setting to false to prevent index recreation on startup which causes conflicts
+# Auto-index creation
 spring.data.mongodb.auto-index-creation=false
 
 # JWT Configuration
-app.jwt.secret=topupSecretKeyThatIsLongEnoughForHS512Algorithm123456789
+app.jwt.secret=${JWT_SECRET:topupSecretKeyThatIsLongEnoughForHS512Algorithm123456789}
 app.jwt.expiration=86400000
 app.jwt.refresh-expiration=604800000
 
@@ -36,32 +27,39 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 
 # Application Specific Configuration
 app.name=TopUp Pro
-app.url=${APP_URL:http://localhost:3001}
+app.url=${APP_URL:https://your-production-domain.com}
 app.support.email=${SUPPORT_EMAIL:support@topuppro.com}
 
 # Verification Token Configuration
 app.verification.email.expiration-hours=168  # 7 days
-app.verification.password-reset.expiration-hours=24  # Increased to 24 hours
+app.verification.password-reset.expiration-hours=24  # 24 hours
 
 # Rate Limiting Configuration
 app.rate-limit.email.max-attempts=5
 app.rate-limit.email.time-window-minutes=60
 
 # Logging Configuration
-logging.level.com.example.topup.demo=DEBUG
-logging.level.org.springframework.web=DEBUG
-logging.level.org.springframework.security=DEBUG
-logging.level.org.springframework.mail=DEBUG
+logging.level.com.example.topup.demo=INFO
+logging.level.org.springframework.web=WARN
+logging.level.org.springframework.security=WARN
+logging.level.org.springframework.mail=WARN
+logging.level.org.springframework.data.mongodb=INFO
 
 # CORS Configuration
-app.cors.allowed-origins=${CORS_ORIGINS:http://localhost:3000,http://localhost:3001,http://localhost:5173,http://10.11.6.107:3001}
+app.cors.allowed-origins=${CORS_ORIGINS:https://your-frontend-domain.com,http://localhost:3000}
 app.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 app.cors.allowed-headers=*
 app.cors.allow-credentials=true
 
-# Profile specific configurations
-spring.profiles.active=dev,local
+# Profile
+spring.profiles.active=prod
 
 # Actuator Configuration (for monitoring)
 management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=when-authorized
+
+# SSL/HTTPS Configuration (uncomment for production)
+# server.ssl.enabled=true
+# server.ssl.key-store=classpath:keystore.p12
+# server.ssl.key-store-password=password
+# server.ssl.key-store-type=PKCS12
