--- a/topup backend/src/main/resources/application-local.properties
+++ b/topup backend/src/main/resources/application-local.properties
@@ -1,5 +1,4 @@
-# Local network configuration
-app.url=http://172.20.10.3:3000
+# Local development configuration
+app.url=http://localhost:3001
 
-# Using your computer's local IP address to make the verification links 
-# accessible from other devices on the same network
+# Updated to use localhost:3001 for the frontend verification links
