Configure for Railway deployment

--- a/topup backend/src/main/resources/application.properties
+++ b/topup backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Application Configuration
 spring.application.name=topup-backend
-server.port=8080
+server.port=${PORT:8080}
 
 # MongoDB Configuration
 # Will use environment variable MONGODB_URI if available, otherwise fallback to MongoDB Atlas
