Configure Railway backend deployment and update API endpoints

--- a/topup backend/src/main/resources/application.properties
+++ b/topup backend/src/main/resources/application.properties
@@ -36,7 +36,7 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 
 # Application Specific Configuration
 app.name=TopUp Pro
-app.url=${APP_URL:http://localhost:3001}
+app.url=${APP_URL:https://topup-website.vercel.app}
 app.support.email=${SUPPORT_EMAIL:support@topuppro.com}
 
 # Verification Token Configuration
