--- a/topup backend/pom.xml
+++ b/topup backend/pom.xml
@@ -92,6 +92,11 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+			<version>1.10.0</version>
+		</dependency>
 		
 		<!-- Test -->
 		<dependency>
