--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.294.0",
+    "mongodb": "^6.20.0",
     "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
