--- a/topup backend/src/main/resources/application.properties
+++ b/topup backend/src/main/resources/application.properties
@@ -4,7 +4,8 @@ server.port=${PORT:8080}
 
 # MongoDB Configuration
 # Will use environment variable MONGODB_URI if available, otherwise fallback to MongoDB Atlas
-spring.mongodb.uri=${MONGODB_URI:mongodb+srv://thujee_db:Thujee%40tamil01923@topupdb.puesjra.mongodb.net/topup_db?retryWrites=true&w=majority&appName=topupdb}
+# For MongoDB Atlas, replace with: mongodb+srv://<username>:<password>@<cluster>.mongodb.net/topup_db?retryWrites=true&w=majority
+spring.mongodb.uri=${MONGODB_URI:mongodb+srv://thujee_db:fqewo7XosJfguUdT@topupdb.puesjra.mongodb.net/topup_db?retryWrites=true&w=majority&appName=topupdb}
 
 # Individual properties below are ignored when URI is set
 # spring.mongodb.database=topup_db
