--- a/topup backend/src/main/resources/application.properties
+++ b/topup backend/src/main/resources/application.properties
@@ -54,6 +54,18 @@ logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.mail=DEBUG
 
+# Multipart File Upload Configuration
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.resolve-lazily=false
+
+# Tomcat Multipart Configuration (to handle multiple form fields)
+server.tomcat.max-http-form-post-size=10MB
+server.tomcat.max-swallow-size=10MB
+server.tomcat.connection-timeout=20000
+
 # CORS Configuration
 app.cors.allowed-origins=${CORS_ORIGINS:http://localhost:3000,http://localhost:3001,http://localhost:5173,http://10.11.6.107:3001}
 app.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
